fix(user): return notfound error
